--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -49,7 +49,7 @@ header .jumbotron {
   position:fixed; /*fixed navigation bar feature*/
   top:0;
   width:100%;
-  background: #CF5565;
+  background: rgb(187,162,202);
   margin-bottom: 0;
   border-radius: 0;
   font-family: "Roboto", sans-serif;
