--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -39,8 +39,8 @@
           <li><a href="/cases"><%=translation.NAV_MENU.CASES%></a></li>
      
       
-          <li> <a href='?clang=cn'><img src=<%=appDir%>/public/images/cn.svg width= 30 height= 20 /></a></li>
-          <li> <a href='?clang=en'><img src=<%=appDir%>/public/images/us.svg width= 30 height= 20 /></a></li>
+          <li> <a href='?clang=cn'><img src='/images/cn.svg' width= 30 height= 20 /></a></li>
+          <li> <a href='?clang=en'><img src='/images/us.svg'width= 30 height= 20 /></a></li>
           
         </ul><!-- nav -->
       </div><!-- navbar-collapse -->
