--- a/app/views/sliderShow.ejs
+++ b/app/views/sliderShow.ejs
@@ -2,23 +2,29 @@
 function showDivs(n) {
          var i;
          var x = document.getElementsByClassName("mySlides");
+         var y = document.getElementsByClassName("text");
          if (n > x.length) {slideIndex = 1}    
          if (n < 1) {slideIndex = x.length}
          for (i = 0; i < x.length; i++) {
             x[i].style.display = "none";  
+            y[i].style.display = "none";
          }
          x[slideIndex-1].style.display = "block";  
+         y[slideIndex-1].style.display = "block";  
        }
        
 function carousel() {
     var i;
     var x = document.getElementsByClassName("mySlides");
+    var y = document.getElementsByClassName("text");
     for (i = 0; i < x.length; i++) {
       x[i].style.display = "none"; 
+      y[i].style.display = "none";
     }
     slideIndex++;
     if (slideIndex > x.length) {slideIndex = 1} 
     x[slideIndex-1].style.display = "block"; 
+    y[slideIndex-1].style.display = "block"; 
     setTimeout(carousel, 8000); // Change image every 2 seconds
 }
  
@@ -50,15 +56,25 @@ $(function() {
   <div id="slider">
         <!-- pictures for the slide show-->
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n1.png"/>
+        <div class="text"><font color="red">hello1</font></div>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n2.png"/>
+        <div class="text"><font color="green">hello2</font></div>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n3.png"/>
+        <div class="text"><font color="blue">hello3</font></div>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n4.png"/>
+        <div class="text"><font color="black">hello4</font></div>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n5.png"/>
+        <div class="text"><font color="grey">hello5</font></div>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n6.png"/>
+        <div class="text"><font color="white">hello6</font></div>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n7.png"/>
+        <div class="text"><font color="red">hello7</font></div>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n8.png"/>
+        <div class="text"><font color="red">hello8</font></div>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n9.png"/>
+        <div class="text"><font color="red">hello9</font></div>
         <img class="mySlides w3-animate-fading" src="../images/sliderpic/n10.png"/>
+        <div class="text"><font color="red">hello10</font></div>
   </div>
   <div id="arrows">
         <!-- arrows used to control the slide show-->
