--- a/app/views/partials/content/serviceslist.ejs
+++ b/app/views/partials/content/serviceslist.ejs
@@ -40,9 +40,9 @@
               <%= 'debug'%>
                 <%= item.summary %>
               <% } else { %>
-                <div style="display:inline-block">
+                 <!-- <div style="display:inline-block">-->
                 <%- item.description %>
-                </div>
+               <!-- </div> -->
               <% } %>
             <% } %>
           </p>
