--- a/app/views/partials/content/schoollist.ejs
+++ b/app/views/partials/content/schoollist.ejs
@@ -13,7 +13,7 @@
         <div id="Modal<%= i %>" class="modal">
           <span class="close">&times;</span>
           <img class="modal-content" id="img<%= i %>">
-          <div style="color:white;" id="caption<%= i %>"></div>
+          <div class="modal-caption" id="caption<%= i %>"></div>
         </div>
         
     <% } %>
