--- a/app/views/sliderShow.ejs
+++ b/app/views/sliderShow.ejs
@@ -3,7 +3,9 @@ function showDivs(n) {
          var i;
          var x = document.getElementsByClassName("mySlides");
          var y = document.getElementsByClassName("text");
-         if (n > x.length) {slideIndex = 1}    
+         if (n > x.length) {
+	 	slideIndex = 1;
+	 }    
          if (n < 1) {slideIndex = x.length}
          for (i = 0; i < x.length; i++) {
             x[i].style.display = "none";  
