--- a/app/views/sliderShow.ejs
+++ b/app/views/sliderShow.ejs
@@ -24,7 +24,9 @@ function carousel() {
       y[i].style.display = "none";
     }
     slideIndex++;
-    if (slideIndex > x.length) {slideIndex = 1} 
+    if (slideIndex > x.length) {
+    	slideIndex = 1
+    } 
     x[slideIndex-1].style.display = "block"; 
     y[slideIndex-1].style.display = "block"; 
     setTimeout(carousel, 8000); // Change image every 2 seconds
