--- a/app/views/sliderShow.ejs
+++ b/app/views/sliderShow.ejs
@@ -51,17 +51,14 @@ function carousel() {
 
 <div class="slideshow">
   <div id="slider">
-  		
-   
-        <%= sliderImage.size() %>
+  		<% console.log(sliderImage.length); %>
         <% for (var i=0;i< sliderImage.length;i++) { %>
         	<%= sliderImage[i].image %>
         	<img class="mySlides w3-animate-fading" src= <%= sliderImage[i].image %> />
         	<div class="text"><font color="red"><%= sliderImage[i].description %></font></div>
-        
         <% } %>
        
-        <!-- pictures for the slide show
+        <!-- pictures for the slide show       -->
             <img class="mySlides w3-animate-fading" src="../images/sliderpic/n2.png" />
             <div class="text"><font color="green">hello2</font></div>
             <img class="mySlides w3-animate-fading" src="../images/sliderpic/n3.png" />
@@ -80,7 +77,7 @@ function carousel() {
             <div class="text"><font color="red">hello9</font></div>
             <img class="mySlides w3-animate-fading" src="../images/sliderpic/n10.png" />
             <div class="text"><font color="red">hello10</font></div>
-            -->
+      
   </div>
   <div id="arrows">
         <!-- arrows used to control the slide show-->
