--- a/app/public/css/modal.css
+++ b/app/public/css/modal.css
@@ -17,7 +17,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 /* Modal Content (image) */
-.modal-content {
+.modal-contents {
     margin: auto;
     display: block;
     width: 80%;
@@ -37,7 +37,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 /* Add Animation */
-.modal-content, .modal-caption {    
+.modal-contents, .modal-caption {    
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
     animation-name: zoom;
