--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -150,7 +150,7 @@ header .jumbotron {
   margin-top: 20px;
 }
 
-.pixgrid img {
+.pixgrid_img {
   padding: 5px;
   float: left;
   width: 33.33%;
@@ -222,7 +222,18 @@ header .jumbotron {
   position: absolute;
   top: 550px;
   left: 400px;
-  color: white;
+  color: white; 
+}
+.background{
+  position:absolute;
+  top:540px;
+  background-color:rgb(236, 225, 225);
+  width:100%;
+  height:80px;
+  opacity:0.7;
+ 
+
+
 }
 /** image size **/
 #slider img {
