--- a/app/views/partials/content/schoollist.ejs
+++ b/app/views/partials/content/schoollist.ejs
@@ -9,10 +9,10 @@
     <% if (image.length > 0) { %>
     <% for (i=0; i< image.length; i++) { %>
         
-        <img id="<%= i %>" src="/images/schools/<%= image[i] %>" alt=<%=image[i]%> >
+        <img id="<%= i %>" class= "pixgrid_img" src="/images/schools/<%= image[i] %>" alt=<%=image[i]%> >
         <div id="Modal<%= i %>" class="modal">
           <span class="close">&times;</span>
-          <img class="modal-content" id="img<%= i %>">
+          <img class="modal-contents" id="img<%= i %>">
           <div class="modal-caption" id="caption<%= i %>"></div>
         </div>
         
