--- a/app/views/partials/template/head.ejs
+++ b/app/views/partials/template/head.ejs
@@ -2,6 +2,7 @@
 
 <title><%= translation.NAV_MENU.HOME_TITLE %>--<%= pageTitle %></title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 <link rel='stylesheet' href='/css/style.css' />
 <link rel='stylesheet' href='/css/modal.css' />
 <link rel='stylesheet' href='/css/thumbnail.css' />
