update Website information

--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -2,7 +2,7 @@
         <div class="footer-left">
           <ul class="footer-links">
            <li><a href="/aboutus">关于我们</a></li>
-           <li><a href="/news">留学咨讯</a></li>
+           <li><a href="https://www.usnews.com/best-colleges">美国大学排名</a></li>
            <li><a href="/contactus">联系我们</a></li>
            <li><a href="/cases">成功案例</a></li>
            <li><a href="/survey">客户申请问卷</a></li>
