--- a/app/views/survey.ejs
+++ b/app/views/survey.ejs
@@ -12,7 +12,7 @@
         <div class="col-sm-4">
 
           <h1 class="feedback-form-title">Survey</h1>
-          
+          <!--
           <form class="feedback-form" enctype="multipart/form-data" method="post">
 
             <div class="form-group">
@@ -126,7 +126,68 @@
             
             <input type="submit" onclick="myFunction()" class="btn btn-default pull-right">
           </form>
-          
+        -->
+
+
+
+
+          <form  class="feedback-form" id="regForm"  enctype="multipart/form-data" method="post">
+            
+            <!-- One "tab" for each step in the form: -->
+            <div class="tab">
+              <label for="feedback-form-title">Name</label><br>
+              <p><input type="text" placeholder="First name"  name="firstname"></p>
+              <p><input placeholder="Last name"  name="lname"></p>
+
+
+              <label for="feedback-form-title"> Contact Info</label><br>
+              <p><input type="text" placeholder="E-mail..." name="email"></p>
+              <p><input placeholder="Phone" name="phone"></p>
+              <p><input placeholder="Address" name="Address"></p>
+              <p><input placeholder="Postal" name="zipcode"></p>
+              <p><input placeholder="State" name="state"></p>
+
+              <label for="feedback-form-title">BirthDay</label><br>
+              <p><input type="date" placeholder="dd" name="dd"></p>
+            </div>
+            <div class="tab">
+              <label for="feedback-form-title">Elementary School</label><br>
+              <p><input placeholder="School Name" name="eschoolname"></p>
+              <p><input type="date" placeholder="Start Date" name="eschoolstart"></p>
+              <p><input type="date" placeholder="End Date" name="eschoolend"></p>
+              <label for="feedback-form-title">Middle School</label><br>
+              <p><input placeholder="School Name" name="mschoolname"></p>
+              <p><input type="date" placeholder="Start Date" name="mschoolstart"></p>
+              <p><input type="date" placeholder="End Date" name="mschoolend"></p>
+              <label for="feedback-form-title">High School</label><br>
+              <p><input placeholder="School Name" name="hschoolname"></p>
+              <p><input type="date" placeholder="Start Date" name="hschoolstart"></p>
+              <p><input type="date" placeholder="End Date" name="hschoolend"></p>
+
+
+            </div>
+            <div class="tab">
+                    <label for="feedback-form-title">Feedback</label><br>
+                <textarea type="text" placeholder="Enter your message, then hit the submit"  class="form-control" name="feedback-form-comments" rows="6"></textarea>
+                <label for="feedback-form-title">Passport Upload</label><br>
+                <input type="file" name="photo" id="feedback-form-passport" accept=".jpg, .jpeg, .png">
+      
+            </div>
+            <div style="overflow:auto;">
+              <div style="float:right;">
+                <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+                <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+              </div>
+            </div>
+            <!-- Circles which indicates the steps of the form: -->
+            <div style="text-align:center;margin-top:40px;">
+              <span class="step"></span>
+              <span class="step"></span>
+              <span class="step"></span>
+              
+              
+            </div>
+          </form>
         </div><!-- primary -->
         <aside class="col-sm-8">
           <div class="maincontent feedback">
@@ -142,29 +203,7 @@
     <% include partials/template/footer.ejs %>
     
   </body>
-  <div data-role="page" id="pageone">
-    
   
-     <div data-role="main" class="ui-content">
-      <p>Click on the link to see the flip effect.</p>
-      <a href="#pagetwo" data-transition="flip">Flip to Page Two</a>
-    </div>
-  
-    <div data-role="footer">
-      <h1>Footer Text</h1>
-    </div>
-  </div> 
-  
-  <div data-role="page" id="pagetwo">
-    
-  
-     <div data-role="main" class="ui-content">
-      <p>Click on the link to go back. <b>Note</b>: fade is default.</p>
-      <a href="#pageone">Go back to Page One</a>
-    </div>
-  
-    
-  </div> 
 </html>
 
 <script>
@@ -173,8 +212,78 @@
     if(x==false){
         window.alert("turn on the cookie!!");
     }
+    var currentTab = 0; // Current tab is set to be the first tab (0)
+showTab(currentTab); // Display the crurrent tab
+
+function showTab(n) {
+  // This function will display the specified tab of the form...
+  var x = document.getElementsByClassName("tab");
+  x[n].style.display = "block";
+  //... and fix the Previous/Next buttons:
+  if (n == 0) {
+    document.getElementById("prevBtn").style.display = "none";
+  } else {
+    document.getElementById("prevBtn").style.display = "inline";
+  }
+  if (n == (x.length - 1)) {
+    document.getElementById("nextBtn").innerHTML = "Submit";
+  } else {
+    document.getElementById("nextBtn").innerHTML = "Next";
+  }
+  //... and run a function that will display the correct step indicator:
+  fixStepIndicator(n)
+}
+
+function nextPrev(n) {
+  // This function will figure out which tab to display
+  var x = document.getElementsByClassName("tab");
+  // Exit the function if any field in the current tab is invalid:
+  if (n == 1 && !validateForm()) return false;
+  // Hide the current tab:
+  x[currentTab].style.display = "none";
+  // Increase or decrease the current tab by 1:
+  currentTab = currentTab + n;
+  // if you have reached the end of the form...
+  if (currentTab >= x.length) {
+    // ... the form gets submitted:
+    document.getElementById("regForm").submit();
+    return false;
+  }
+  // Otherwise, display the correct tab:
+  showTab(currentTab);
+}
+
+function validateForm() {
+  return true;
+  // This function deals with validation of the form fields
+  var x, y, i, valid = true;
+  x = document.getElementsByClassName("tab");
+  y = x[currentTab].getElementsByTagName("input");
+  // A loop that checks every input field in the current tab:
+  for (i = 0; i < y.length; i++) {
+    // If a field is empty...
+    if (y[i].value == "") {
+      // add an "invalid" class to the field:
+      y[i].className += " invalid";
+      // and set the current valid status to false
+      valid = false;
+    }
+  }
+  // If the valid status is true, mark the step as finished and valid:
+  if (valid) {
+    document.getElementsByClassName("step")[currentTab].className += " finish";
+  }
+  return valid; // return the valid status
+}
+
+function fixStepIndicator(n) {
+  // This function removes the "active" class of all steps...
+  var i, x = document.getElementsByClassName("step");
+  for (i = 0; i < x.length; i++) {
+    x[i].className = x[i].className.replace(" active", "");
+  }
+  //... and adds the "active" class on the current step:
+  x[n].className += " active";
+}
 
 </script>
-
-<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
