--- a/app/views/survey.ejs
+++ b/app/views/survey.ejs
@@ -11,144 +11,34 @@
       <div class="row">
         <div class="col-sm-4">
 
-          <h1 class="feedback-form-title">Survey</h1>
-          <!--
-          <form class="feedback-form" enctype="multipart/form-data" method="post">
-
-            <div class="form-group">
-              <label for="feedback-form-name">First Name</label>
-              <input type="text", class="form-control" placeholder="Enter your firstname" name="firstname">
-            </div>
-
-            <div class="form-group">
-              <label for="feedback-form-title">Last Name</label>
-              <input type="text" class="form-control" placeholder="Enter your lastname" name="lastname">
-            </div>
-
-            <div class="form-group">
-                <label for="feedback-form-title">Email</label>
-                <input type="email" class="form-control" placeholder="Enter your Email" name="email" >
-            </div>
-
-            <div class="form-group">
-                <label for="feedback-form-title">Phone</label>
-                <input type="text" class="form-control" name="phone" placeholder="Enter your Phone number">
-            </div>
-
-            <div class="form-group">
-                <label for="feedback-form-title"> Address</label><br>
-                <p>Street Address
-                    <span><input type="text" class="form-control" name="Address" placeholder="Address"></span> 
-                
-                </p>
-                <p>State/Province
-                    <span><input type="text" class="form-control" name="State" placeholder=""></span> 
-                </p><p>Postal Code
-                
-                    <span><input type="text" class="form-control" name="Postal" placeholder=""></span> 
-                    </span>
-                </p>
-    </div> 
-            <div class="form-group">
-              <label for="feedback-form-title">DOB</label>
-              <input type="date" class="form-control" name="DOB" placeholder="MMDDYYYY">
-            </div>
-            <div class="form-group">
-            <label for="feedback-form-title">Elementary School </label>
-            <p>School Name
-                <span><input type="text" class="form-control" name="eschoolname" placeholder="Name"></span> 
-            
-            </p>
-            <p>Start Date
-                <span><input type="date" class="form-control" name="eschoolstart" placeholder="MMDDYYYY"></span> 
-            </p><p>End Date
-            
-                <span><input type="date" class="form-control" name="eschoolend" placeholder="MMDDYYYY"></span> 
-                </span>
-            </p>
-            </div>
-
-            <div class="form-group">
-                <label for="feedback-form-title">Middle School </label><br>
-                <p>School Name
-                    <span><input type="text" class="form-control" name="mschoolname" placeholder="Name"></span> 
-                
-                </p>
-                <p>Start Date
-                    <span><input type="date" class="form-control" name="mschoolstart" placeholder="MMDDYYYY"></span> 
-                </p><p>End Date
-                
-                    <span><input type="date" class="form-control" name="mschoolend" placeholder="MMDDYYYY"></span> 
-                    </span>
-                </p>
-            </div>
-
-            <div class="form-group">
-                    <label for="feedback-form-title">High School </label><br>
-                    <p>School Name
-                        <span><input type="text" class="form-control" name="hschoolname" placeholder="Name"></span> 
-                    
-                    </p>
-                    <p>Start Date
-                        <span><input type="date" class="form-control" name="hschoolstart" placeholder="MMDDYYYY"></span> 
-                    </p><p>End Date
-                    
-                        <span><input type="date" class="form-control" name="hschoolend" placeholder="MMDDYYYY"></span> 
-                        </span>
-                    </p>
-            </div>
-
-            <div class="form-group">
-                        <label for="feedback-form-title"> College</label><br>
-                        <p>School Name
-                            <span><input type="text" class="form-control" name="cschoolname" placeholder="Name"></span> 
-                        
-                        </p>
-                        <p>Start Date
-                            <span><input type="date" class="form-control" name="cschoolstart" placeholder="MMDDYYYY"></span> 
-                        </p><p>End Date
-                        
-                            <span><input type="date" class="form-control" name="cschoolend" placeholder="MMDDYYYY"></span> 
-                            </span>
-                        </p>
-            </div>        
-            
-            
-            <div class="form-group">
-                <label for="feedback-form-message">Comments</label>
-                <textarea type="text" placeholder="Enter your message, then hit the submit"  class="form-control" name="feedback-form-comments" rows="6"></textarea>
-            </div>
-            
-            <div class="form-group">
-                <label for="feedback-form-title">PassPort Upload</label>
-                <input type="file" name="photo" id="feedback-form-passport" accept=".jpg, .jpeg, .png">
-            </div>
-            
-            <input type="submit" onclick="myFunction()" class="btn btn-default pull-right">
-          </form>
-        -->
-
-
-
-
+          <h1 class="feedback-form-title"><%=translation.survey_form.survey%></h1>
+    
           <form  class="feedback-form" id="regForm"  enctype="multipart/form-data" method="post">
             
             <!-- One "tab" for each step in the form: -->
             <div class="tab">
-              <label for="feedback-form-title">Name</label><br>
-              <p><input type="text" placeholder="First name"  name="firstname"></p>
-              <p><input placeholder="Last name"  name="lname"></p>
+              <p> <label for="feedback-item"><%=translation.survey_form.firstName%></label> 
+                  <input type="text" placeholder="First name" name="firstname">
+              </p>
+              <p> <label for="feedback-item"><%=translation.survey_form.lastName%></label>
+              	  <input placeholder="Last name" name="lname">
+              </p>
+              
+              <!-- <label for="feedback-item"> Contact Info</label><br> -->
+              <p> <label for="feedback-item"><%=translation.survey_form.email%></label> 
+               	<input type="text" placeholder="E-mail..." name="email">
+              </p>
+              <p><label for="feedback-item"><%=translation.survey_form.phone%></label>
+              <input placeholder="Phone" name="phone"></p>
+              <p><label for="feedback-item"><%=translation.survey_form.address%></label>
+              <input placeholder="Address" name="Address"></p>
+              <p><label for="feedback-item"><%=translation.survey_form.postal%></label>
+              <input placeholder="Postal" name="zipcode"></p>
+              <p><label for="feedback-item"><%=translation.survey_form.state%></label>
+              <input placeholder="State" name="state"></p>
 
-
-              <label for="feedback-form-title"> Contact Info</label><br>
-              <p><input type="text" placeholder="E-mail..." name="email"></p>
-              <p><input placeholder="Phone" name="phone"></p>
-              <p><input placeholder="Address" name="Address"></p>
-              <p><input placeholder="Postal" name="zipcode"></p>
-              <p><input placeholder="State" name="state"></p>
-
-              <label for="feedback-form-title">BirthDay</label><br>
-              <p><input type="date" placeholder="dd" name="dd"></p>
+              <p><label for="feedback-item"><%=translation.survey_form.birthday%></label>
+              <input type="date" placeholder="dd" name="dd"></p>
             </div>
             <div class="tab">
               <label for="feedback-form-title">Elementary School</label><br>
