--- a/app/views/survey.ejs
+++ b/app/views/survey.ejs
@@ -8,7 +8,7 @@
           </div>
         </header>
     <div class="container">
-      <div class="row">
+      <div class="row regForm">
         <div class="col-sm-4">
 
           <h1 class="feedback-form-title"><%=translation.survey_form.survey%></h1>
@@ -17,6 +17,8 @@
             
             <!-- One "tab" for each step in the form: -->
             <div class="tab">
+            
+              <label for="feedback-item"> <%=translation.survey_form.contact%></label><br>
               <p> <label for="feedback-item"><%=translation.survey_form.firstName%></label> 
                   <input type="text" placeholder="First name" name="firstname">
               </p>
@@ -24,40 +26,65 @@
               	  <input placeholder="Last name" name="lname">
               </p>
               
-              <!-- <label for="feedback-item"> Contact Info</label><br> -->
+            
               <p> <label for="feedback-item"><%=translation.survey_form.email%></label> 
-               	<input type="text" placeholder="E-mail..." name="email">
+               	  <input type="text" placeholder="E-mail..." name="email">
               </p>
               <p><label for="feedback-item"><%=translation.survey_form.phone%></label>
-              <input placeholder="Phone" name="phone"></p>
+            	  <input placeholder="Phone" name="phone"></p>
               <p><label for="feedback-item"><%=translation.survey_form.address%></label>
-              <input placeholder="Address" name="Address"></p>
+                  <input placeholder="Address" name="Address"></p>
               <p><label for="feedback-item"><%=translation.survey_form.postal%></label>
-              <input placeholder="Postal" name="zipcode"></p>
+                  <input placeholder="Postal" name="zipcode"></p>
               <p><label for="feedback-item"><%=translation.survey_form.state%></label>
-              <input placeholder="State" name="state"></p>
+                  <input placeholder="State" name="state"></p>
 
               <p><label for="feedback-item"><%=translation.survey_form.birthday%></label>
-              <input type="date" placeholder="dd" name="dd"></p>
+                 <input type="date" placeholder="dd" name="dd"></p>
             </div>
+            
             <div class="tab">
-              <label for="feedback-form-title">Elementary School</label><br>
-              <p><input placeholder="School Name" name="eschoolname"></p>
-              <p><input type="date" placeholder="Start Date" name="eschoolstart"></p>
-              <p><input type="date" placeholder="End Date" name="eschoolend"></p>
-              <label for="feedback-form-title">Middle School</label><br>
-              <p><input placeholder="School Name" name="mschoolname"></p>
-              <p><input type="date" placeholder="Start Date" name="mschoolstart"></p>
-              <p><input type="date" placeholder="End Date" name="mschoolend"></p>
-              <label for="feedback-form-title">High School</label><br>
-              <p><input placeholder="School Name" name="hschoolname"></p>
-              <p><input type="date" placeholder="Start Date" name="hschoolstart"></p>
-              <p><input type="date" placeholder="End Date" name="hschoolend"></p>
-
-
+              <label for="feedback-form-title"><%=translation.survey_form.elementarySchool%></label><br>
+              <p><label for="feedback-item"><%=translation.survey_form.schoolName%>
+              	<input placeholder="School Name" name="eschoolname">
+              </p>
+              <p>
+              	<label for="feedback-item"><%=translation.survey_form.startDate%>
+              	<input type="date" placeholder="Start Date" name="eschoolstart">
+              </p>
+              <p>
+              	<label for="feedback-item"><%=translation.survey_form.endDate%>
+              	<input type="date" placeholder="End Date" name="eschoolend">
+              </p>
+              	
+              <label for="feedback-form-title"><%=translation.survey_form.middleSchool%></label><br>
+              <p><label for="feedback-item"><%=translation.survey_form.schoolName%>
+                 <input placeholder="School Name" name="mschoolname">
+              </p>
+              <p><label for="feedback-item"><%=translation.survey_form.startDate%>
+                 <input type="date" placeholder="Start Date" name="mschoolstart">
+              </p>
+              <p><label for="feedback-item"><%=translation.survey_form.endDate%>
+              	 <input type="date" placeholder="End Date" name="mschoolend">
+              </p>
+              
+              <label for="feedback-form-title"><%=translation.survey_form.highSchool%></label><br>
+              <p>
+              	<label for="feedback-item"><%=translation.survey_form.schoolName%>
+              	<input placeholder="School Name" name="hschoolname">
+              </p>
+              <p>
+              	 <label for="feedback-item"><%=translation.survey_form.startDate%>
+             	 <input type="date" placeholder="Start Date" name="hschoolstart">
+              </p>
+              <p>
+              	<label for="feedback-item"><%=translation.survey_form.endDate%>
+              	<input type="date" placeholder="End Date" name="hschoolend">
+              </p>
             </div>
+
             <div class="tab">
-                    <label for="feedback-form-title">Feedback</label><br>
+                    <label for="feedback-form-title"><%=translation.survey_form.comment%></label></label><br>
                 <textarea type="text" placeholder="Enter your message, then hit the submit"  class="form-control" name="feedback-form-comments" rows="6"></textarea>
                 <label for="feedback-form-title">Passport Upload</label><br>
                 <input type="file" name="photo" id="feedback-form-passport" accept=".jpg, .jpeg, .png">
@@ -74,20 +101,15 @@
               <span class="step"></span>
               <span class="step"></span>
               <span class="step"></span>
-              
-              
             </div>
           </form>
         </div><!-- primary -->
-        <aside class="col-sm-8">
-          <div class="maincontent feedback">
-              <h2 class="article-title"></h2>
-              <div class="feedback-messages"></div>
-          </div>
-        </aside><!-- secondary -->
+        
       </div>
       
     </div><!-- container -->
+    
+    
     <% include partials/template/jsdefaults.ejs %>
     <% include partials/template/header.ejs %>
     <% include partials/template/footer.ejs %>
