fix sliding image issue

--- a/app/views/sliderShow.ejs
+++ b/app/views/sliderShow.ejs
@@ -45,35 +45,14 @@ function carousel() {
 
 <div class="slideshow">
   <div id="slider">
-      <% console.log(sliderImage.length); %>
+      <% console.log(sliderImage[0]); %>
     
         <% for (var i=0;i< sliderImage.length;i++) { %>
         	<%= sliderImage[i].image %>
-        	<img class="mySlides w3-animate-fading" src= <%= sliderImage[i].image %> />
+        	<img class="mySlides w3-animate-fading" src= ../images/sliderpic/<%= sliderImage[i].name %> />
         	<div class="text"><font color="red"><%= sliderImage[i].description %></font></div>
         <% } %>
-       
-        <!-- pictures for the slide show  -->     
-            <img class="mySlides w3-animate-fading" src="../images/sliderpic/n2.png" />
-            <div class="text"><font color="green">hello2</font></div>
-            
-            <img class="mySlides w3-animate-fading" src="../images/sliderpic/n3.png" />
-            <div class="text"><font color="blue">hello3</font></div>
-            <img class="mySlides w3-animate-fading" src="../images/sliderpic/n4.png" />
-            <div class="text"><font color="black">hello4</font></div>
-            <img class="mySlides w3-animate-fading" src="../images/sliderpic/n5.png" />
-            <div class="text"><font color="grey">hello5</font></div>
-            <img class="mySlides w3-animate-fading" src="../images/sliderpic/n6.png" />
-            <div class="text"><font color="white">hello6</font></div>
-            <img class="mySlides w3-animate-fading" src="../images/sliderpic/n7.png" />
-            <div class="text"><font color="red">hello7</font></div>
-            <img class="mySlides w3-animate-fading" src="../images/sliderpic/n8.png" />
-            <div class="text"><font color="red">hello8</font></div>
-            <img class="mySlides w3-animate-fading" src="../images/sliderpic/n9.png" />
-            <div class="text"><font color="red">hello9</font></div>
-            <img class="mySlides w3-animate-fading" src="../images/sliderpic/n10.png" />
-            <div class="text"><font color="red">hello10</font></div>  
-            <div class="background">        
+        <div class="background">  
   </div>
   <div id="arrows">
         <!-- arrows used to control the slide show-->
