--- a/app/views/partials/content/schoollist.ejs
+++ b/app/views/partials/content/schoollist.ejs
@@ -6,6 +6,7 @@
   </p>
 
   <div class="pixgrid clearfix">
+    <%= console.log(translation.university.length); %>
     <% if (image.length > 0) { %>
     <% for (i=0; i< image.length; i++) { %>
         
