--- a/app/views/sliderShow.ejs
+++ b/app/views/sliderShow.ejs
@@ -50,7 +50,7 @@ function carousel() {
         	<img class="mySlides w3-animate-fading" src= ../images/sliderpic/<%= translation.sliderImage[i].name %> />
         	<div class="text"><font color="red"><%= translation.sliderImage[i].description %></font></div>
         <% } %>
-        <div class="background">  
+        <div class="background"></div>  
   </div>
   <div id="arrows">
         <!-- arrows used to control the slide show-->
