--- a/app/views/partials/content/sidebar.ejs
+++ b/app/views/partials/content/sidebar.ejs
@@ -1,6 +1,10 @@
 <article class="sidebar">
-  <h1 class="sidebar-title"><%=translation.SIDEBAR_TEXT.header%></h1>
+  <h1 class="sidebar-title"></h1>
   <ul class="sidebar-body">
-    <%-translation.SIDEBAR_TEXT.text%>
+    
+ 
   </ul>
+  <iframe width="420" height="315"
+  src="https://www.youtube.com/embed/VrS6akzR3sk?autoplay=1">
+  </iframe>
 </article><!-- article -->
