--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -20,7 +20,7 @@
                   <% sum=0; %>
                 <% allServices.forEach(function(item) { %>
                   <li><a href="/services/<%= item.shortname %>">
-                        <%= item.name %>
+                        <%= translation.dropdown[sum].title %>
                         <% sum=sum+1; %>
                       </a>
                   </li>
