privacy and university text

--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -43,4 +43,4 @@
         </div> 
 </footer>
 
-<div class="footer">&copy Oakleafage.com 2018  |   <a href="/privacy">Privacy Statement</a>   |  <a href="/termofuse">Terms of Use</a></div>
+<div class="footer">&copy Oakleafage.com 2018  |   <a href="https://app.termly.io/document/privacy-policy/242c70e7-65af-4b5f-a4b2-676cbfb983ac">Privacy Statement</a>   |  <a href="/termofuse">Terms of Use</a></div>
