--- a/app/views/partials/content/serviceslist.ejs
+++ b/app/views/partials/content/serviceslist.ejs
@@ -2,17 +2,24 @@
   
   <div class="container">
     <div class="row">
-        <% var counter = 0; 
+        
+         
+        <div class="<% if (pageID == 'home') { %>col-sm-4 text-center<% } else { %>col-sm-8 <% } %>">
+          <% var counter = 0; 
            services = translation.dropdown;
            for (x in services) {
            item = services[x];
+           
+           console.log(pageID);
+           
          %>
-         
-        <div class="<% if (pageID == 'home') { %>col-sm-4 text-center<% } else { %>col-sm-8 <% } %>">
-          <% if (counter < SERVICES_NUM) { %>
+          <% if (counter < translation.dropdown.length) { %>
+            <%if(item.shortname==identify){%>
           <h3 class="serviceslist-title"><%= item.title %></h3>
+        
           <h5 class="serviceslist-name">with 
                  <a href="/services/<%= item.shortname %>"><%= item.name %></a></h5>
+          <%}%>
           <p class="serviceslist-info">
 
              <a href="/services/<%= item.shortname %>">
@@ -25,16 +32,19 @@
                  counter++; 
                %>
               <% if (pageID == 'serviceList') { %>
+                <%if(item.shortname==identify){%>
                 <img class="serviceslist-img img-circle pull-left" 
                      src="/images/services/<%= item.shortname %>_tn.jpg" 
                      alt="Photo of <%= item.name %>"></a>
-              <% } %>
-            </a>
+              <% }} %>
+            </a> 
+            
              <% if (pageID == 'serviceDetail') { %>
+              <%if(item.shortname==identify){%>
                 <img class="serviceslist-img img-responsive pull-left" 
                    src="/images/services/<%= item.shortname %>.jpg" 
                    alt="Photo of <%= item.name %>"></a>
-              <% } %>
+              <% }} %>
             </a>
             <% if (pageID !== 'home') { %>
               <% if (pageID == 'serviceList') { %>
@@ -43,10 +53,10 @@
               <% } else { %>
 
                 <div style="display:block">
-
+                  <%if(item.shortname==identify){%>
                 <%- item.description %>
                <!-- </div> -->
-              <% } %>
+              <% }} %>
             <% } %>
           </p>
         </div>
